# sm-ai-v1-backend

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml
config/: mcp_servers.yaml
docs/: 2025-11-19-Task.md
src/api/: __init__.py  chat_endpoints.py  rag_endpoints.py  router.py
src/config/: __init__.py  config_db.py  config_model.py  config_prompts.py
src/core/: __init__.py  graph_factory.py  llm_service.py  prompts_service.py  session_manager.py
src/data/prompts/agentic/: 01-agentic-rag-default.yaml  02-agentic-rag-counseling.yaml
src/data/prompts/chatbot/: 01-general.yaml  02-sns-marketing.yaml  03-text-summary.yaml
src/models/: __init__.py  api_schema.py  base_models.py
src/services/: __init__.py  prompts_service.py
src/systems/chat/: README.md  __init__.py  chat_system_chain.py  constants.py
src/systems/chat/agents/: __init__.py  agent_planner.py  tool_executor.py
src/systems/chat/mcp/: __init__.py  mcp_client.py  mcp_config.py  mcp_tool_adapter.py
src/systems/chat/models/: __init__.py  function_call_model.py
src/systems/chat/prompts/: __init__.py  persona_loader.py
src/systems/chat/tools/: __init__.py  chart_generator.py  data_analyzer.py  rag_tool.py  report_formatter.py  tool_registry.py
src/systems/rag/: __init__.py  constants.py  rag_system_chain.py
src/systems/rag/processors/: __init__.py  chunking_strategy.py  document_loader.py
src/systems/rag/retrievers/: __init__.py  base_retriever.py  hybrid_retriever.py  naive_retriever.py
src/systems/rag/services/: __init__.py  embedding_service.py  vector_store.py
